--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: rgb(39, 44, 50);
+}
+
 .container{
     display: grid;
     grid-template-columns: repeat(3,100px);
     grid-template-rows: repeat(3,100px);
-    gap: 20px;
+    gap: 1px;
 }
 
 .grid-box{
@@ -10,4 +18,6 @@
     justify-content: center;
     align-items: center;
     background-color: tomato;
+    color: white;
+    font-size: 32px;
 }
