--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 100vh;
     background-color: rgb(39, 44, 50);
 }
