--- a/style.css
+++ b/style.css
@@ -61,3 +61,17 @@ body{
 .reset-button:active{
     background-color: rgb(224, 15, 15);
 }
+
+@media only screen and (max-width: 600px) {
+    .container{
+        grid-template-columns: repeat(3,90px);
+        grid-template-rows: repeat(3,90px);
+        gap: 10px;
+    }
+    .grid-box{
+        font-size: 58px;
+    }
+    body{
+        gap:50px
+    }
+}
